@@ -3,6 +3,8 @@ Changelog
 
 1.2 - (unreleased)
 ------------------
+- Added pdf cover & styling
+  [iulianpetchesi #85140]
 - Prevent unwanted slicing of content at pdf export
   [iulianpetchesi #85140]
 - Improve pdf styling
